fix buy now jump 4

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
